mobile-friendly/mf-css/style.css
:root,
    /* dark theme number 1 */
    :root.dark1 {
        --background-color: #24184b;
        --text-color: #dda7ff;
        --reverse-text-color: #24184b;
        --accent-1: #563d76;
        --accent-2: #fbd160;
        --accent-3: #1b85a6;
        --filter-color: #dda7ff7e;
        --box-shadow: 0px 0px 15px #dda7ff7e;
        --warning: #b80303;
    }
    /*dark theme number 2 */
    :root.dark2 {
        --background-color: #2f1f45;
        --text-color: #f9e7e7;
        --reverse-text-color: #2f1f45;
        --accent-1: #00416c;
        --accent-2: #b96ac9;
        --accent-3: #f9dbbd;
        --filter-color: #f9e7e77e;
        --box-shadow: 0px 0px 15px #f9e7e77e;
        --warning: #b80303;
    }
    /*dark theme number 3*/
    :root.dark3 {
        --background-color: #312257;
        --text-color: #f9dbbd;
        --reverse-text-color: #312257;
        --accent-1: #502163;
        --accent-2: #ffc680;
        --accent-3: #3c7e85;
        --filter-color: #f9dbbd7e;
        --box-shadow: 0px 0px 15px #f9dbbd7e;
        --warning: #b80303;
    }
    /* light theme number 1 */
    :root.light1{
        --background-color: #f0d9ff;
        --text-color: #2e1f60;
        --reverse-text-color: #f0d9ff;
        --accent-1: #c099d8;
        --accent-2: #e1ba7a;
        --accent-3: #00738a;
        --filter-color: #2e1f607e;
        --box-shadow: 5px 5px 12px #2e1f607e;
        --text-shadow: 0px 0px 10px #f0d9ff;
        --warning: #b80303;
    }
    /*light theme number 2 */
    :root.light2 {
        --background-color: #f9e7e7;
        --text-color: #2f1f45;
        --reverse-text-color: #f9e7e7;
        --accent-1: #f9dbbd;
        --accent-2: #b96ac9;
        --accent-3: #00416c;
        --filter-color: #2f1f457e;
        --box-shadow: 5px 5px 12px #2e1f607e;
        --text-shadow: 0px 0px 10px var(--accent-2);
        --warning: #b80303;
    }

/* @font-face {
    font-family: Luminari;
    src: url("https://www.elsewherewriters.com/fonts/luminari/Luminari-Regular.ttf");
} */
html {
    scroll-behavior: smooth;
}
h1, h2, h3, h4, h5, h6, p {
    margin: 0;
    padding: 0;
}
a {
    color: var(--accent-3);
}
.pulse {
    transition: all 0.2s ease;
}
.pulse:active {
    transform: scale(1.3);
}
* {
    box-sizing: border-box;
}
/* MENU ICON */
.menu-icon-wrapper {
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
    align-items: center;
}
.menu-bar {
    background-color: var(--accent-3);
    width: 100%;
    /* border: 0.5px solid var(--accent-2); */
}
.slide-right {
    animation: slide-right 0.3s linear 0s 1 normal forwards;
}
@keyframes slide-right {
	0% {
		opacity: 0;
		transform: translateX(-250px);
	}

	100% {
		opacity: 1;
		transform: translateX(0);
	}
}
.slide-left {
    animation: slide-left 0.3s linear 0s 1 normal forwards;
}
@keyframes slide-left {
	0% {
		opacity: 0;
		transform: translateX(250px);
	}

	100% {
		opacity: 1;
		transform: translateX(0);
    }
}

@media only screen and (min-width: 200px) {
    body {
        background-color: var(--background-color);
        color: var(--text-color);
        padding: 0px;
        margin: 0px;
        /* font-family: "Luminari"; */
        height: 100%;
        width: 100%;
    }
    h1 {
        font-size: 34px;
    }
    h2 {
        font-size: 28px;
    }
    p {
        font-size: 20px;
    }
    .logo img{
        display: none;
    }
    .nav-bar {
        display: flex;
        justify-content: space-between;
        align-items: center;
        padding: 1em 0em;
    }
    .mobileNav {
        display: block;
        z-index: 2;
        margin: 0em 1em;
        cursor: pointer;
        width: 3em;
        height: fit-content;
    }
    .menu-icon-wrapper {
        width: 3em;
        height: 3em;
    }
    .menu-bar {
        width: 90%;
        height: 0.3em;
    }
    .mobileNav img{
        width: 3em;
        height: fit-content;
    }
    .navMenu {
        position: absolute;
        top: 0;
        z-index: 1;
        display: none;
        width: 45%;
        background-color: var(--accent-1);
        border-radius: 0px 0px 12px 0px;
        border-right: 2px solid var(--accent-3);
        border-bottom: 2px solid var(--accent-3);
        padding: 4em 1em 1em 1em;
    }
    .navContent {
        height: fit-content;
        display: flex;
        flex-direction: column;
        justify-content: center;
        align-items: flex-end;
    }
    .navContent a {
        text-decoration: none;
        color: var(--text-color);
        padding-bottom: 1em;
        font-size: 18px;
    }
    .projects {
        display: flex;
        flex-direction: column;
        justify-content: center;
        align-items: flex-end;
    }
    .user {
        display: flex;
        justify-content: flex-end;
        align-items: center;
        width: fit-content;
        height: fit-content;
        padding: 0em 1em 0em 0em;
    }
    .user img{
        width: 3em;
        z-index: 2;
        height: fit-content;
        cursor: pointer;
    }
    .userDropdown {
        display: none;
        position: absolute;
        top: 0;
        right: 0;
        z-index: 1;
        width: 40%;
        background-color: var(--accent-1);
        border-radius: 0px 0px 0px 12px;
        border-left: 2px solid var(--accent-3);
        border-bottom: 2px solid var(--accent-3);
        padding: 4em 1em 1em 1em;
    }
    .userContent {
        z-index: 1;
        display: flex;
        flex-direction: column;
    }
    .userContent a {
        text-decoration: none;
        width: 100%;
        color: var(--text-color);
        padding-bottom: 1em;
        font-size: 18px;
    }
    .userContent a:first-child {
        padding-top: 1em;
    }
    .dropdown-icon {
        width: 1em;
        height: fit-content;
    }
    .badge {
        width: 3.5em;
        height: fit-content;
    }
    footer {
        display: grid;
        grid-template-columns: auto auto;
        justify-content: space-around;
        gap: 0.5em;
        padding: 1em 0.5em;
        border-top: 2px solid var(--accent-3);
    }
    #copyright, #contact, #logo-link {
        font-size: 14px;
    }
    #logo-link {
        grid-column: span 2;
        justify-self: center;
    }
}
@media only screen and (min-width: 326px) {
    h1 {
        font-size: 38px;
    }
    h2 {
        font-size: 32px;
    }
    p {
        font-size: 24px;
    }
    .badge {
        width: 4em;
        height: fit-content;
    }
    #copyright, #contact, #logo-link {
        font-size: 16px;
    }
}
@media only screen and (min-width: 720px) {
    .badge {
        width: 5em;
        height: fit-content;
    }
    footer {
        display: flex;
    }
    /* #logo-link {
        grid-column: 1;
    } */
    #copyright, #contact, #logo-link {
        font-size: 18px;
    }
}
.show {
    display: block;
}

